# tc_fiap_fase4

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  grafana_dash.json  prometheus.yml  pyproject.toml  requirements.txt
notebook/: TC_FASE4.ipynb
src/api/: config.py  main.py
src/api/client/: routes.py
src/api/client/static/css/: stlyle.css  style.css
src/api/client/static/js/: main.js
src/api/client/templates/: about.html  index.html
src/api/endpoints/: health.py  predict_petr4 copy.py  predict_petr4.py
src/api/schemas/: prediction.py
src/api/services/: data_loader.py  feature_pipeline.py  market_data.py  ml_predictor.py
src/models/: lstm_petr4_final.keras  scaler_x_final.pkl  scaler_y_final.pkl
