[project]
name = "tc-fiap-fase4"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcio",email = "marciocad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pandas (==2.2.2)",
    "scikit-learn (==1.6.1)",
    "joblib (==1.5.3)",
    "numpy (>=2.1.0)",
    "tensorflow (==2.19.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
